# electronics-shop-project

./: .flake8  .gitignore  .pylintrc  README.md  config.py  export_parent_folder.py  my_work.py  pyproject.toml  pytest.ini  requirements.txt  setting.py  settings.py  test_item.csv
.github/workflows/: pylint.yml  python-package.yml
SkyPro_8_dz_electronics-shop-project/: pyproject.toml
data/: broken_file.csv
exception/: exception.py
homework-1/: README.md  main.py  pyproject.toml  requirements.txt  test_coverage.txt
homework-1/1 task/src/: item.py
homework-1/1 task/tests/: test_item.py
homework-1/2 task/src/: item.py
homework-1/2 task/tests/: test.py
homework-1/src/: item.py  items.csv
homework-1/src/tests/: test_item.py
homework-1/tests/: test_item.py
homework-2/: README.md  config.py  main.py
homework-2/src/: channel.py  item.py  youtube_api.py
homework-2/tests/: test_channel.py  test_item.py
homework-3/: README.md  main.py
homework-4/: README.md  main.py
homework-5/: README.md  main.py
homework-6/: README.md  main.py
homework_1/: main.py
my-project/: pyproject.toml
src/: Exceptions.py  Keyboard.py  MyExceptions.py  bad_items.csv  classes.py  create_csv.py  error.py  error_csv.csv  error_items.csv  errors.py  exception.py  exceptions.py  exeption.py  incorrect.csv  instantiatecsv.py  instantiatecsverror.py  item.csv  item.py  item_test.csv  items(brake).csv  items.csv  items.py  items1.csv  items2.csv  items3.csv  items_incorrect.csv  items_test.csv  itemz.csv  keyboard.py  language_mixin.py  main.py  mixin_langauge.py  mixing.py  phone.py  phony.py  settings.py  tem2.py  test_items.csv  utils.py
tests/: broken_file.csv  conftest.py  items.csv  items_error.csv  test_Keyboard.py  test_errors.py  test_exception.py  test_exceptions.py  test_exeption.py  test_item.csv  test_item.py  test_item_error.py  test_items.csv  test_items_damaged.csv  test_kb.py  test_keyboard.py  test_language_mixin.py  test_main.py  test_phone  test_phone.py  tests_phone.py  without_colum_items.csv  wrong_items.csv
