[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["mars aygistov <m.aygistov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
