[tool.poetry]
name = "skypro-8-dz-electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["Maksim Morozov <max2morozov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
