[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = ""
authors = ["Dmitry Dronov <cskafan1911@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_1"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
